# NeoChef

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: NeoChef_Concept_Roadmap.md
docs/roles/: rolesnap.yaml
neo4j/: .env.example  Dockerfile  apoc.conf  docker-compose.yml  neo4j.conf
notebooks/: 01-data-exploration.ipynb
scripts/: cache_recipes.py  create_schema.py  health_check.py
src/neochef/adapters/: __init__.py  extractor.py
src/neochef/config/: __init__.py  logger.py  settings.py
src/neochef/domain/: ingredient.py  recipe.py
task/01-initial-setup/: task_log.md  task_plan.md  task_results.md
task/02-extract-and-cache/: task_log.md  task_plan.md  task_results.md
